data/test/type_check/fail/assign_3.v
wire x[3:0];
assign x[1:2] = 1;
initial $finish;
